# Copyright (c) The kademlite Authors
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "kad-interop-test"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
libp2p = { version = "0.56", features = [
    "tokio",
    "noise",
    "yamux",
    "tcp",
    "kad",
    "identify",
    "macros",
    "ed25519",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
